jabgui/src/main/resources/org/jabref/gui/Dark.css
.root {
    -jr-theme: #2c9490;
    -jr-accent: #255652;
    -jr-selected: -jr-accent;
    -jr-hover: #fff1;

    -jr-row-odd-background: #272b38;
    -jr-row-even-background: #212330;
    -jr-accent-alt: -jr-accent;

    -jr-red: #b71c1f;
    -jr-light-red: #db1d2b;
    -jr-green: #1cb631;
    -jr-light-green: #28d93c;
    -jr-blue: #2c2cb7;
    -jr-light-blue: #3a3ad9;
    -jr-purple: #b72486;
    -jr-light-purple: #d927a8;
    -jr-yellow: #b5b021;
    -jr-orange: #b77620;

    -jr-base: #141824;

    -jr-background-alt: #151924;
    -jr-menu-background: #141824;
    -jr-toolbar: -jr-menu-background;
    -jr-sidepane-background: #212330;
    -jr-search-background: #2c2e3b;

    -jr-sidepane-header-background: -jr-background-alt;
    -jr-group-hits-bg: -jr-background-alt;
    -jr-group-hits-fg: -fx-light-text-color;
    -fx-control-inner-background: #272b38;

    -fx-control-inner-background-alt: -fx-control-inner-background;

    -fx-dark-text-color: black;
    -fx-mid-text-color: #7d8591;
    -fx-light-text-color: #e5e7ea;
    -jr-separator: #333744;
    -fx-outer-border: #424758;

    -jr-icon: -fx-light-text-color;
    -jr-icon-active: derive(-fx-light-text-color, 50%);
    -jr-icon-background-active: -jr-hover;
    -jr-icon-background-armed: #fff2;

    -jr-menu-foreground: -fx-light-text-color;
    -jr-menu-item-foreground: -fx-light-text-color;
    -jr-menu-forground-active: derive(-fx-light-text-color, 50%);

    -jr-scrollbar-thumb: -fx-light-text-color;
    -jr-scrollbar-track: derive(-fx-control-inner-background, -90%);

    -fx-focused-text-base-color: -fx-light-text-color;

    -jr-tooltip-fg: derive(-fx-light-text-color, 50%);

    -jr-drag-target: -jr-accent;
    -jr-drag-target-hover: -jr-accent;

    -js-summary-text-color: derive(-fx-light-text-color, 70%);
    -js-summary-text-color-selected: derive( -fx-dark-text-color, 70%);

    -jr-ai-message-user: derive(-jr-theme, -50%);
    -jr-ai-message-ai: derive(-jr-theme, -75%);

    -jr-match-1-odd: -jr-row-odd-background;
    -jr-match-1-even: -jr-row-even-background;
    -jr-match-1-text-color: -fx-mid-text-color;

    -jr-match-2-odd: derive(-jr-theme, -60%);
    -jr-match-2-even: derive(-jr-match-2, 4%);
    -jr-match-2-text-color: -fx-mid-text-color;

    -jr-match-3-odd: derive(-jr-theme, -70%);
    -jr-match-3-even: derive(-jr-match-3, 4%);
    -jr-match-3-text-color: derive(-jr-accent, 30%);

    -jr-match-4-odd: derive(-jr-black, 10%);
    -jr-match-4-even: -jr-background-alt;
    -jr-match-4-text-color: derive(-jr-match-3-text-color, -15%);
}

.unchanged {

}

.addition {
    -fx-text-background-color: black;
    -rtfx-background-color: #FDAF56;
}

.deletion {
    -fx-text-background-color: black;
    -rtfx-background-color: #FFEECC;
}

#previewBody {
    background-color: #272b38; /* -fx-control-inner-background*/
    color: #7d8591; /* -fx-mid-text-color*/
}

.custom-color-dialog {
    -fx-background-color: -fx-control-inner-background;
}

.table-row-cell:odd{
    -fx-background-color:#272b38;
}

.table-row-cell:even{
    -fx-background-color: #212330;
}

.table-row-cell:hover,
.tree-table-row-cell:hover {
    -fx-background-color: -jr-hover;
}

/* Drag and drop colored indicator */

.table-row-cell:dragOver-center {
    -fx-background-color: -jr-drag-target-hover;
}

.merge-field-value .action-icon {
    -fx-blend-mode: none;
    -fx-opacity: 90%;
}

.merge-header-cell {
    -fx-border-width: 0 0 1 0;
    -fx-border-color: -fx-outer-border;
    -fx-background-color: -jr-row-odd-background;
}

.merge-header {
    -fx-background-color: -jr-row-odd-background;
}

.table-view .groupColumnBackground {
    -fx-stroke: -jr-gray-3;
}

.code-area {
    -fx-background-color: -jr-background-alt;
    -fx-text-fill: -fx-mid-text-color;
}

.code-area .lineno {
    -fx-background-color: -jr-background-alt;
    -fx-text-fill: -fx-mid-text-color;
}

.text-unchanged {
    -fx-fill: -fx-light-text-color;
}

.radio-button > .radio {
    -fx-background-color: -fx-light-text-color, -fx-control-inner-background;
}

#groupTree .numberColumn > .hits:any-selected {
    -fx-background-color: derive(-jr-gray-3, 25%);
}

#groupTree .numberColumn > .hits:all-selected {
    -fx-background-color: -jr-gray-3;
}

#preferencesContainer .tab-pane > .tab-header-area > .tab-header-background {
    -fx-background-color: -jr-background;
}

.global-search-bar .toggle-button .glyph-icon {
    -fx-icon-color: derive(-jr-search-background, 50%);
}

.notification-bar > .pane {
    -fx-background-color: -fx-light-text-color;
}

.rating > .container > .button {
    -fx-icon-color: derive(-fx-light-text-color, -50%);
}

.rating > .container > .button.strong {
    -fx-icon-color: -fx-light-text-color;
}

.file-row-text {
    -fx-text-fill: -fx-light-text-color;
}

.walkthrough-spotlight {
    -fx-fill: rgba(0, 0, 0, 0.65);
}

.walkthrough-darken {
    -fx-fill: rgba(0, 0, 0, 0.65);
}

.walkthrough-ping {
    /* -jr-accent with 75% Alpha */
    -fx-fill: rgba(37, 86, 82, 0.75);
}

.walkthrough-tooltip .border {
    /* -jr-background-alt. Variable is not used because the variable cannot be properly resolved and lead to transparent fill. */
    -fx-fill: #151924 !important;
}

/* region CiteAsYouWrite */

/* this is the search filed used to enter the citation name */
.search-dialog {
    -fx-background-color: -jr-background-alt;
}

/* each cells' background color and text color */
.search-dialog .list-cell:hover,
.search-dialog .list-cell:selected {
    -fx-background-color: derive(-fx-control-inner-background, 10%);
    -fx-text-fill: -fx-light-text-color;
}

/* each cells' text and label styles here */
.search-dialog .list-cell .text,
.search-dialog .list-cell .label,
.search-dialog .search-result-label,
.search-dialog .search-result-description {
    -fx-text-fill: -fx-light-text-color;
    -fx-fill: -fx-light-text-color;
}

/* This is the chip style that contains the selected citation name and cross button */
.search-dialog .chip-style {
    -fx-border-radius: 15px;
    -fx-border-color: -jr-separator;
    -fx-border-width: 1px;
}

/* This is the chip style button present in the chip style. it is the cross */
.search-dialog .chip-style .button {
    -fx-border-color: transparent;
    -fx-border-width: 0;
    -fx-background-color: transparent;
}

/* endregion */

